[package]
name = "apple_device_profile_publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
aws-config = "0.12.0"
aws-sdk-s3 = "0.12.0"
lambda_runtime = "0.5.1"
reqwest = { version = "0.11.10", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1", features = ["full"] }