[package]
name = "deny_list_updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.12.0"
aws-sdk-s3 = "0.12.0"
aws-sdk-lambda = "0.12.0"
aws-types = "0.12.0"
bytes = "1.1.0"
lambda_runtime = "0.5.1"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
regex = "1.5.6"
serde_json = "1.0.81"
zip = "0.6.2"